--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -23,7 +23,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:name=".SignUp" 
+        <activity android:name=".MainActivity" 
+               android:screenOrientation="portrait"
+        
              android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -83,7 +85,7 @@
         
         
         
-         <activity android:name=".MainActivity" 
+         <activity android:name=".Signup" 
             android:screenOrientation="portrait"
             android:configChanges="keyboardHidden|orientation"
           android:launchMode="singleTask"
